--- a/main.html
+++ b/main.html
@@ -16,27 +16,32 @@
     <div class="container d-flex flex-column flex-md-row justify-content-between">
       <a class="py-2" href="#">Duy-Portfolio</a>
 
-      <div class=" justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">Resume</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Portfolio</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#contact">Contact</a>
-          </li>
-        </ul>
+      <div class=" justify-content-end heyhey">
+        <nav class="my-2 my-md-0 mr-md-3">
+          <a class="p-2 text-dark" href="#">HOME</a>
+          <a class="p-2 text-dark" href="#">RESUME</a>
+          <a class="p-2 text-dark" href="#">PORTFOLIO</a>
+          <a class="p-2 text-dark" href="#">CONTACT</a>
+        </nav>
       </div>
     </div>
   </nav>
   <!--/ Nav End /-->
+<!--/ jUMBOTRON /-->
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-3">Hello, My name is Duy!</h1>
+      <p>I'm a front-end developer</p>
+    </div>
+  </div>
+  <div class="container">
+<!--/ jUMBOTRON End /-->
+
+
+
+
+
+
 
 
 
